# ml-learning-project

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/dsproject/: exception.py  logger.py
